--- a/pages/docs/v2/deployments/official-builders/ruby-now-ruby.mdx
+++ b/pages/docs/v2/deployments/official-builders/ruby-now-ruby.mdx
@@ -35,7 +35,7 @@ require 'cowsay'
 Handler = Proc.new do |req, res|
     res.status = 200
     res['Content-Type'] = 'text/plain'
-    res.body = Cowsay.say('gem:RANDOMNESS_PLACEHOLDER', 'cow')
+    res.body = Cowsay.say('hello world', 'cow')
 end
 ```
 
