--- a/pages/docs/v2/deployments/official-builders/node-js-now-node.mdx
+++ b/pages/docs/v2/deployments/official-builders/node-js-now-node.mdx
@@ -301,7 +301,7 @@ The installation algorithm of dependencies works as follows:
 
 ### Private npm modules
 
-To install private npm modules, define `NPM_TOKEN` as a [build environment variable](/docs/v2/deployments/configuration#build-env) in `now.json`.
+To install private npm modules, define `NPM_TOKEN` as a [build environment variable](/docs/v2/deployments/configuration#build.env) in `now.json`.
 
 Alternatively, define `NPM_RC` as a [build environment variable](/docs/v2/deployments/configuration#build.env) with the contents of `~/.npmrc`.
 
